<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorbacground"
    tools:context=".SignIn">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

   <LinearLayout
       android:id="@+id/layoutheader"
       android:layout_width="match_parent"
       android:layout_height="@dimen/_150sdp"
       android:background="@color/colorprimary"
       android:gravity="center"
       android:orientation="vertical"
       app:layout_constraintTop_toTopOf="parent">

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:fontFamily="@font/ubuntu_bold"
           android:includeFontPadding="false"
           android:text="@string/welcome_to"
           android:textColor="@color/white"
           android:textSize="@dimen/_16sdp"/>

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="@dimen/_4sdp"
           android:fontFamily="@font/ubuntu_bold"
           android:includeFontPadding="false"
           android:text="@string/video_meeting_conference_app"
           android:textColor="@color/colortexticon"
           android:textSize="@dimen/_16sdp"/>


   </LinearLayout>

    <TextView
        android:id="@+id/textsignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/ubuntu_regular"
        android:includeFontPadding="false"
        android:text="@string/sign_in_to_your_account"
        android:textColor="@color/colorprimarytext"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutheader"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardSignin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        app:cardCornerRadius="@dimen/_4sdp"
        app:layout_constraintTop_toBottomOf="@id/textsignin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorbacground"
            android:orientation="vertical"
            android:padding="@dimen/_4sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:fontFamily="@font/ubuntu_regular"
                android:includeFontPadding="false"
                android:text="@string/email"
                android:textColor="@color/colorprimarytext"
                android:textSize="@dimen/_11sdp"/>

            <EditText
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:background="@null"
                android:fontFamily="@font/ubuntu_regular"
                android:hint="Your@email.com"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorprimarytext"
                android:textColorHint="@color/colorhinttext"
                android:textSize="@dimen/_13sdp"/>



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:fontFamily="@font/ubuntu_regular"
                android:includeFontPadding="false"
                android:text="@string/password"
                android:textColor="@color/colorprimarytext"
                android:textSize="@dimen/_11sdp"/>

            <EditText
                android:id="@+id/inputpassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:background="@null"

                android:fontFamily="@font/ubuntu_regular"
                android:hint="@string/u2022_u2022_u2022_u2022_u2022_u2022"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textPassword"
                android:textColor="@color/colorprimarytext"
                android:textColorHint="@color/colorhinttext"
                android:textSize="@dimen/_13sdp"/>


        </LinearLayout>


    </androidx.cardview.widget.CardView>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnsignin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:fontFamily="@font/ubuntu_bold"
        android:includeFontPadding="false"
        android:text="@string/sign_in"
        android:background="@color/colorprimary"
        android:textColor="@color/colortexticon"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/cardSignin"
        />

    <ProgressBar
        android:id="@+id/signinProgressBar"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/btnsignin"
        app:layout_constraintStart_toEndOf="@id/btnsignin"
        app:layout_constraintEnd_toStartOf="@id/btnsignin"
        app:layout_constraintTop_toTopOf="@id/btnsignin"/>

    <TextView
        android:id="@+id/txtnoaccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/ubuntu_regular"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/colorprimarytext"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintTop_toBottomOf="@id/btnsignin"/>


    <TextView
        android:id="@+id/txtsignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20sdp"
        android:fontFamily="@font/ubuntu_bold"
        android:gravity="center"
        android:includeFontPadding="false"
        android:padding="@dimen/_6sdp"
        android:text="@string/sign_up"
        android:textColor="@color/coloraccent"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtnoaccount"
        app:layout_constraintVertical_bias="0.131" />

    <TextView
        android:id="@+id/sname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20sdp"
        android:fontFamily="@font/ubuntu_bold"
        android:gravity="center"
        android:includeFontPadding="false"
        android:layout_marginTop="@dimen/_37sdp"
        android:padding="@dimen/_29sdp"
        android:text="Powered by RanaWat 🍁"
        android:textColor="@color/colorprimary"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtsignUp"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>